--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   url_launcher: ^6.1.8
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
